Made the code more readable, added comments

--- a/style/style.css
+++ b/style/style.css
@@ -156,6 +156,9 @@ body, html {
 }
 
 /**//**//**//**//**//**//**/
+
+/*buttons*/
+
 button{
     border: #E50F10 1px solid;
     border-radius: 7px;
